# YoloX-Tracking-ncnn-RPi_64-bit

./: CMakeLists.txt  README.md  YoloX_Byte_Track.cbp
src/: yoloX.cpp
